src/cancel/snapshots/asupersync__cancel__protocol_validator_test_suite__tests__cancel_protocol_obligation_abort_sequence.snap
---
source: src/cancel/protocol_validator_test_suite.rs
expression: "json!({\n    \"scenario\": \"obligation_abort_sequence\", \"steps\": steps, \"final_state\":\n    format!(\"{:?}\", machine.current_state()), \"state_description\":\n    machine.state_description(), \"is_terminal\": machine.is_terminal(),\n})"
---
{
  "final_state": "Aborted { reason: \"race loser aborted\" }",
  "is_terminal": true,
  "scenario": "obligation_abort_sequence",
  "state_description": "Aborted - race loser aborted",
  "steps": [
    {
      "event": "Reserve { token: 7 }",
      "result": {
        "kind": "valid"
      },
      "step": 0
    },
    {
      "event": "Abort { reason: \"race loser aborted\" }",
      "result": {
        "kind": "valid"
      },
      "step": 1
    }
  ]
}
