src/cancel/snapshots/asupersync__cancel__protocol_validator_test_suite__tests__cancel_protocol_obligation_duplicate_commit_violation.snap
---
source: src/cancel/protocol_validator_test_suite.rs
expression: "json!({\n    \"scenario\": \"obligation_duplicate_commit_violation\", \"steps\": steps,\n    \"final_state\": format!(\"{:?}\", machine.current_state()),\n    \"state_description\": machine.state_description(), \"is_terminal\":\n    machine.is_terminal(),\n})"
---
{
  "final_state": "Committed",
  "is_terminal": true,
  "scenario": "obligation_duplicate_commit_violation",
  "state_description": "Committed - obligation fulfilled",
  "steps": [
    {
      "event": "Reserve { token: 7 }",
      "result": {
        "kind": "valid"
      },
      "step": 0
    },
    {
      "event": "Commit",
      "result": {
        "kind": "valid"
      },
      "step": 1
    },
    {
      "event": "Commit",
      "result": {
        "attempted_transition": "Commit",
        "current_state": "Committed",
        "kind": "invalid",
        "reason": "Cannot transition from terminal obligation state"
      },
      "step": 2
    }
  ]
}
