src/cancel/snapshots/asupersync__cancel__protocol_validator_test_suite__tests__cancel_protocol_task_clean_cancel_sequence.snap
---
source: src/cancel/protocol_validator_test_suite.rs
expression: "json!({\n    \"scenario\": \"task_clean_cancel_sequence\", \"steps\": steps, \"final_state\":\n    format!(\"{:?}\", machine.current_state()), \"state_description\":\n    machine.state_description(), \"is_terminal\": machine.is_terminal(),\n})"
---
{
  "final_state": "Cancelled",
  "is_terminal": true,
  "scenario": "task_clean_cancel_sequence",
  "state_description": "Cancelled - drained and terminated",
  "steps": [
    {
      "event": "Start",
      "result": {
        "kind": "valid"
      },
      "step": 0
    },
    {
      "event": "RequestCancel",
      "result": {
        "kind": "valid"
      },
      "step": 1
    },
    {
      "event": "DrainComplete",
      "result": {
        "kind": "valid"
      },
      "step": 2
    }
  ]
}
