src/cancel/snapshots/asupersync__cancel__protocol_validator_test_suite__tests__cancel_protocol_task_panic_after_cancel_request.snap
---
source: src/cancel/protocol_validator_test_suite.rs
expression: "json!({\n    \"scenario\": \"task_panic_after_cancel_request\", \"steps\": steps,\n    \"final_state\": format!(\"{:?}\", machine.current_state()),\n    \"state_description\": machine.state_description(), \"is_terminal\":\n    machine.is_terminal(),\n})"
---
{
  "final_state": "Panicked { message: \"panic during finalize\" }",
  "is_terminal": true,
  "scenario": "task_panic_after_cancel_request",
  "state_description": "Panicked - panic during finalize",
  "steps": [
    {
      "event": "Start",
      "result": {
        "kind": "valid"
      },
      "step": 0
    },
    {
      "event": "RequestCancel",
      "result": {
        "kind": "valid"
      },
      "step": 1
    },
    {
      "event": "Panic { message: \"panic during finalize\" }",
      "result": {
        "kind": "valid"
      },
      "step": 2
    }
  ]
}
