src/cancel/snapshots/asupersync__cancel__protocol_validator_test_suite__tests__cancel_protocol_validator_diagnostic_matrix.snap
---
source: src/cancel/protocol_validator_test_suite.rs
expression: "json!({\n    \"scenario\": \"validator_diagnostic_matrix\", \"activate\":\n    render_transition_result(&activate),\n    \"region_invalid_complete_without_tasks\":\n    render_transition_result(&region_invalid),\n    \"zero_token_invariant_violation\":\n    render_transition_result(&zero_token_invariant), \"unregistered_task\":\n    render_transition_result(&unregistered_task), \"unregistered_obligation\":\n    render_transition_result(&unregistered_obligation), \"validator_stats\":\n    render_validator_stats(&validator), \"violation_count\":\n    validator.violation_count(),\n})"
---
{
  "activate": {
    "kind": "valid"
  },
  "region_invalid_complete_without_tasks": {
    "attempted_transition": "TaskCompleted",
    "current_state": "Active { active_tasks: 0, pending_finalizers: 0 }",
    "kind": "invalid",
    "reason": "Cannot complete task in region with no active tasks"
  },
  "scenario": "validator_diagnostic_matrix",
  "unregistered_obligation": {
    "attempted_transition": "Commit",
    "current_state": "Unknown",
    "kind": "invalid",
    "reason": "Obligation ObligationId(406:0) not registered with validator"
  },
  "unregistered_task": {
    "attempted_transition": "Complete",
    "current_state": "Unknown",
    "kind": "invalid",
    "reason": "Task TaskId(406:0) not registered with validator"
  },
  "validator_stats": {
    "channels": 0,
    "io_operations": 0,
    "obligations": 1,
    "regions": 1,
    "tasks": 0,
    "timers": 0,
    "violations": 4
  },
  "violation_count": 4,
  "zero_token_invariant_violation": {
    "context": "Reserved obligation must have non-zero token; previous state: Created, attempted transition: Reserve { token: 0 }",
    "invariant": "Obligation invariant",
    "kind": "invariant_violation"
  }
}
